@@ -1,8 +1,9 @@
 apply plugin: 'kotlin'
-apply plugin: 'maven'
+apply plugin: 'maven-publish'
 apply plugin: 'jacoco'
 apply plugin: 'pmd'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'java'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -12,9 +13,9 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.4'
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.13.3"
     implementation 'com.j2html:j2html:1.4.0'
-    testImplementation 'com.google.testing.compile:compile-testing:0.19'
+    testImplementation 'com.google.testing.compile:compile-testing:0.21.0'
     testImplementation 'junit:junit:4.12'
-    testImplementation 'com.github.tschuchortdev:kotlin-compile-testing:1.4.9'
+    testImplementation 'dev.zacsweers.kctfork:core:0.4.0'
     testImplementation 'org.mockito:mockito-core:1.10.19'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0'
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
@@ -23,17 +24,40 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
-targetCompatibility = '1.8'
-sourceCompatibility = '1.8'
+targetCompatibility = JavaVersion.VERSION_17
+sourceCompatibility = JavaVersion.VERSION_17
 
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
+java {
+    withSourcesJar()
+    withJavadocJar()
 }
 
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
+if (JavaVersion.current() >= JavaVersion.VERSION_16) {
+    test {
+        jvmArgs(
+                "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+        )
+    }
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId project.group
+            artifactId project.name
+            version project.version
+            from components.java
+        }
+    }
 }
 
 jacoco {
@@ -46,24 +70,12 @@ jacocoTestReport {
 
     reports {
 
-        xml.enabled = true
-        html.enabled = false
-    }
-}
-
-artifacts {
-    archives sourcesJar
-    archives javadocJar
-}
-
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
+        xml{
+            enabled true
+        }
+        html{
+            enabled false
+        }
     }
 }
 
